--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "animatewithsass": "^3.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "ng2-order-pipe": "^0.1.5",
     "ngx-bootstrap": "^4.0.0",
+    "ngx-order-pipe": "^2.0.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
