--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "user-links",
-  "version": "0.0.0",
+  "version": "1.0.14",
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.0.5.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,33 +16,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.11",
-    "@angular/common": "^7.2.11",
-    "@angular/compiler": "^7.2.11",
-    "@angular/core": "^7.2.11",
-    "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
-    "@angular/platform-browser": "^7.2.11",
-    "@angular/platform-browser-dynamic": "^7.2.11",
-    "@angular/router": "^7.2.11",
+    "@angular/animations": "^7.2.6",
+    "@angular/common": "^7.2.6",
+    "@angular/compiler": "^7.2.6",
+    "@angular/core": "^7.2.6",
+    "@angular/forms": "^7.2.6",
+    "@angular/http": "^7.2.6",
+    "@angular/platform-browser": "^7.2.6",
+    "@angular/platform-browser-dynamic": "^7.2.6",
+    "@angular/router": "^7.2.6",
     "@types/lowdb": "^1.0.7",
-    "animatewithsass": "^3.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.0",
     "ng2-order-pipe": "^0.1.5",
-    "ngx-bootstrap": "^4.0.0",
+    "ngx-bootstrap": "^4.0.1",
     "ngx-order-pipe": "^2.0.2",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.2.4",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
+    "@angular/compiler-cli": "^7.2.6",
+    "@angular/language-service": "^7.2.6",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.12.30",
+    "@types/node": "^10.14.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,11 +55,10 @@
     "protractor": "~5.4.0",
     "ts-node": "^8.0.3",
     "tslint": "~5.12.1",
-    "typescript": "~3.2.4"
-  },
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.0.5.",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "typescript": "~3.2.4",
+    "animatewithsass": "^3.2.1",
+    "http-proxy-agent": "^2.1.0",
+    "https-proxy-agent": "^2.2.0",
+    "tar": "^4.4.8"
+  }
 }
